[FIX] sale: fix ecommerce quantity width
Issue

    - Install eCommerce, use Graphene
    - Shop > Any product

    The add to cart button is shifted.

Cause

    Quantity field take full-width & max-width is too large.

Solution

    Remove width: 100% and reduce the max-width.
    Screenshots on OPW

OPW-2166060

closes odoo/odoo#43451

--- a/addons/sale/static/src/scss/product_configurator.scss
+++ b/addons/sale/static/src/scss/product_configurator.scss
@@ -44,9 +44,13 @@
     }
 }
 
-.css_quantity input[name="add_qty"] {
-    max-width: 125px;
-    text-align: center;
+.css_quantity {
+    width: initial; // We don't want the quantity form to be full-width
+
+    input[name="add_qty"] {
+        max-width: 50px;
+        text-align: center;
+    }
 }
 
 
